// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse should render CollapseItem correctly 1`] = `
<div>
  <div
    class="rc-collapse rc-hairline--top-bottom"
  >
    <div
      class="rc-collapse-item"
    >
      <div
        class="rc-cell rc-cell--clickable rc-collapse-item__title"
        role="button"
      >
        <i
          class="rc-badge__wrapper rc-cell__left-icon van-icon van-icon-shop-o"
        />
        <div
          class="rc-cell__title"
        >
          标题1
        </div>
        <div
          class="rc-cell__value"
        >
          <span>
            this is value
          </span>
        </div>
        question-o
      </div>
    </div>
  </div>
</div>
`;

exports[`Collapse when value is change 1`] = `
<div>
  <div
    class="rc-collapse rc-hairline--top-bottom"
  >
    <div
      class="rc-collapse-item"
    >
      <div
        class="rc-cell rc-cell--clickable rc-collapse-item__title rc-collapse-item__title--expanded"
        role="button"
      >
        <div
          class="rc-cell__title"
        >
          标题1
        </div>
        <i
          class="rc-badge__wrapper rc-cell__right-icon van-icon van-icon-arrow"
        />
      </div>
      <div
        class="rc-collapse-item__wrapper"
      >
        <div
          class="rc-collapse-item__content"
        >
          内容
        </div>
      </div>
    </div>
  </div>
</div>
`;
